# PotreeConverter

PotreeConverter/: CMakeLists.txt
PotreeConverter/include/: PlyPointReader.h  PointReader.h  PotreeConverter.h  PotreeWriter.h  stuff.h
PotreeConverter/src/: BINPointReader.cpp  LASPointReader.cpp  PotreeConverter.cpp  PotreeWriter.cpp  main.cpp  stuff.cpp
